kubernetes/service.yaml

# Service for rachid Backend
apiVersion: v1
kind: Service
metadata:
  name: rachid-backend
  namespace: rachid
  labels:
    app.kubernetes.io/name: rachid
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rachid
    app.kubernetes.io/component: backend
